# exot_app_apk

./: .clang-format  .gitignore  .gitmodules  README.md  build.gradle  build_install_as_system_app.sh  gradlew.bat  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
intentproxy/: build.gradle
intentproxy/src/main/: AndroidManifest.xml
intentproxy/src/main/java/ch/ethz/exot/intentproxy/: IntentProxyService.java
lib/: CMakeLists.txt  build.gradle  cmake_install.cmake
lib/src/androidTest/java/ch/ethz/karajan/lib/: ExampleInstrumentedTest.java
lib/src/main/: AndroidManifest.xml
lib/src/main/java/ch/ethz/karajan/lib/: BaseMeterService.java  Intents.java  Messages.java
lib/src/main/res/layout/: activity_main.xml
lib/src/main/res/values/: strings.xml
lib/src/test/java/ch/ethz/karajan/lib/: ExampleUnitTest.java
libjava/: build.gradle
libjava/src/main/: AndroidManifest.xml
libjava/src/main/java/ch/ethz/exot/intents/: ExOTApps.java  IntentProxy.java  RepetiTouch.java
libnative/: CMakeLists.txt  build.gradle
libnative/src/main/: AndroidManifest.xml
libnative/src/main/cpp/include/exot/jni/: log.h  manager.h  wrapper.h
libnative/src/main/java/ch/ethz/exot/lib/: BaseService.java
thermalsc/: CMakeLists.txt  build.gradle
thermalsc/src/main/: AndroidManifest.xml
thermalsc/src/main/cpp/: jni-thermalsc.cpp
thermalsc/src/main/java/ch/ethz/exot/thermalsc/: MeterService.java
thermalsc/src/main/res/values/: strings.xml
thermalsc_ui/: CMakeLists.txt  build.gradle
thermalsc_ui/src/androidTest/java/ch/ethz/karajan/thermalsc/: ExampleInstrumentedTest.java
thermalsc_ui/src/main/: AndroidManifest.xml
thermalsc_ui/src/main/cpp/: jni_thermal-sc.cpp
thermalsc_ui/src/main/cpp/include/: Manager.h
thermalsc_ui/src/main/java/ch/ethz/karajan/thermalsc/: MeterService.java  UIactivity.java
thermalsc_ui/src/main/res/values/: strings.xml
thermalsc_ui/src/test/java/ch/ethz/karajan/thermalsc/: ExampleUnitTest.java
thermalscui/: CMakeLists.txt  build.gradle
thermalscui/src/main/: AndroidManifest.xml
thermalscui/src/main/cpp/: jni-thermalscui.cpp
thermalscui/src/main/java/ch/ethz/exot/thermalscui/: MeterService.java  UIactivity.java
thermalscui/src/main/res/layout/: activity_main.xml  activity_ui.xml
thermalscui/src/main/res/values/: dimens.xml  strings.xml
